# kaze

./: Cargo.toml  README.md
.cargo/: config.toml
hyprland/: kaze.conf
kaze-tui/: package-lock.json  package.json
kaze-tui/src/: app.ts  kaze-bridge.ts
src/: config.rs  daemon.rs  detector.rs  executor.rs  logger.rs  main.rs  notifier.rs
src/plugins/: docker.rs  mod.rs  node.rs  pacman.rs
systemd/: kaze-cleaner.service  kaze-cleaner.timer
tests/: detector_tests.rs  plugin_tests.rs
