[package]
name = "kaze"
version = "0.1.0"
edition = "2021"
description = "🧹 Limpeza inteligente de sistema para Arch Linux + Hyprland"
license = "MIT"
repository = "https://github.com/kx7-io/kaze"
authors = ["Nyx7 <kx7-io@github.com>"]

[[bin]]
name = "kaze"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"          # <- ADICIONADO
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
procfs = "0.16"
sysinfo = "0.31"
async-trait = "0.1"
thiserror = "1"
bytesize = "1"
dirs = "5"                        # <- ADICIONADO

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
